manifest/dc-pg-primary.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-pg-rw-loadbalancer
  namespace: gds
spec:
  selector:
    cnpg.io/cluster: dc-pg
    cnpg.io/instanceRole: primary
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
