manifest/dc-pg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pg-dc-ingress
  namespace: gds
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
spec:
  rules:
  - host: pg-dc.k8s.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dc-pg-rw
            port:
              number: 5432
